tests/ui/panic-handler/panic-handler-bad-signature-2.stderr
error[E0308]: mismatched types
  --> $DIR/panic-handler-bad-signature-2.rs:9:1
   |
LL | fn panic(info: &'static PanicInfo) -> !
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ lifetime mismatch
   |
   = note: expected signature `fn(&PanicInfo<'_>) -> _`
              found signature `fn(&'static PanicInfo<'_>) -> _`
note: the anonymous lifetime as defined here...
  --> $SRC_DIR/core/src/panicking.rs:LL:COL
   = note: ...does not necessarily outlive the static lifetime

error[E0803]: cannot infer an appropriate lifetime for lifetime parameter '_ in generic type due to conflicting requirements
  --> $DIR/panic-handler-bad-signature-2.rs:9:1
   |
LL | fn panic(info: &'static PanicInfo) -> !
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: first, the lifetime cannot outlive the anonymous lifetime as defined here...
  --> $SRC_DIR/core/src/panicking.rs:LL:COL
note: ...so that the types are compatible
  --> $DIR/panic-handler-bad-signature-2.rs:9:1
   |
LL | fn panic(info: &'static PanicInfo) -> !
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: expected `fn(&PanicInfo<'_>) -> _`
              found `fn(&'static PanicInfo<'_>) -> _`
   = note: but, the lifetime must be valid for the static lifetime...
note: ...so that the reference type `&'static PanicInfo<'_>` does not outlive the data it points at
  --> $DIR/panic-handler-bad-signature-2.rs:9:1
   |
LL | fn panic(info: &'static PanicInfo) -> !
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0803.
For more information about an error, try `rustc --explain E0308`.
