tests/ui/panic-handler/panic-handler-bad-signature-2.rs
//@ compile-flags:-C panic=abort

#![no_std]
#![no_main]

use core::panic::PanicInfo;

#[panic_handler]
fn panic(info: &'static PanicInfo) -> !
//~^ ERROR mismatched types [E0308]
//~^^ ERROR cannot infer an appropriate lifetime for lifetime parameter '_
{
    loop {}
}
